examples/test/testpolicy19609.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19609
  namespace: namespace459
spec:
  podSelector:
    matchLabels:
      key24: value10
      key11: value13
      key10: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value37
          key34: value43
      podSelector:
        matchLabels:
          key12: value3
